--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -14,16 +14,15 @@
 #particles canvas {
   position: absolute;
   width: 100%;
-  height: 115%;
+  height: 105%;
   z-index: -1;
 }
 
 #particles-js {
   position: absolute;
   width: 100%;
-  height: 115%;
+  height: 105%;
 	background: #3c6396;
-  /*z-index: 1;*/
 }
 
 /*
